--- a/Projeto.Escola/App.config
+++ b/Projeto.Escola/App.config
@@ -7,7 +7,7 @@
   <connectionStrings>
     <add
     name="aula"
-    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Aulas\Projeto.02-Danillo\Projeto.Escola\AppData\Database.mdf;Integrated Security=True"
+    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\Aulas\Projeto.02-Danillo\Projeto.Escola\AppData\Data.mdf;Integrated Security=True"
 />
   </connectionStrings>
 </configuration>
