--- a/Projeto.Escola/Projeto.Escola.csproj
+++ b/Projeto.Escola/Projeto.Escola.csproj
@@ -67,7 +67,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\EnderecoRepository.cs" />
-    <Compile Include="Repository\FuncionarioRepository.cs" />
     <Compile Include="Repository\ProfessorRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,12 +88,12 @@
     <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AppData\Database.mdf">
+    <Content Include="AppData\Data.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="AppData\Database_log.ldf">
+    <Content Include="AppData\Data_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>Database.mdf</DependentUpon>
+      <DependentUpon>Data.mdf</DependentUpon>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
